Stop binary assets being logged by Apache

--- a/etc/vhost.development.conf
+++ b/etc/vhost.development.conf
@@ -5,8 +5,9 @@
     DocumentRoot /work/2k/git/www
 
     # Logging
+    SetEnvIf     Request_URI "(\.gif|\.png|\.jpg|\.css|\.js|\.swf)$" is_asset
     ErrorLog     "/work/2k/logs/2k_error.log"
-    CustomLog    "/work/2k/logs/2k_access.log" common
+    CustomLog    "/work/2k/logs/2k_access.log" combined env=!is_asset
 
     # Environment Variables
     SetEnv RPG2KNET_LOCAL "true"
