Structure rework, additions to forum and account framework(s)
Signed-off-by: jonnu <jontce@gmail.com>

--- a/etc/vhost.development.conf
+++ b/etc/vhost.development.conf
@@ -21,6 +21,9 @@
     php_admin_value session.name "rpg2knetcore"
     php_admin_value session.use_only_cookies 1
 
+    # APC
+    php_admin_value apc.rfc1867_name "UPLOAD_PROGRESS"
+
     <Directory />
     
         Options -Indexes
