Updating web server configurations

--- a/etc/vhost.apache.dev.conf
+++ b/etc/vhost.apache.dev.conf
@@ -6,8 +6,8 @@
 
     # Logging
     SetEnvIf     Request_URI "(\.gif|\.png|\.jpg|\.css|\.js|\.swf)$" is_asset
-    ErrorLog     "/work/2k/logs/2k_error.log"
-    CustomLog    "/work/2k/logs/2k_access.log" combined env=!is_asset
+    ErrorLog     "/work/2k/logs/2k_error.apache.log"
+    CustomLog    "/work/2k/logs/2k_access.apache.log" combined env=!is_asset
 
     # Environment Variables
     SetEnv RPG2KNET_LOCAL "true"
@@ -19,6 +19,8 @@
    
     # Session/Cookies
     php_admin_value session.name "rpg2knetcore"
+    php_admin_value session.hash_function "sha256"
+    php_admin_value session.hash_bits_per_character 4
     php_admin_value session.use_only_cookies 1
 
     # APC
