Tweak Apache vhost configuration file

--- a/etc/vhost.apache.dev.conf
+++ b/etc/vhost.apache.dev.conf
@@ -11,7 +11,7 @@
 
     # Environment Variables
     SetEnv RPG2KNET_LOCAL "true"
-    SetEnv RPG2KNET_ENVIRONMENT 'development'
+    SetEnv RPG2KNET_ENVIRONMENT "development"
 
     # Development values
     php_admin_value xdebug.profiler_enable 1
@@ -26,6 +26,8 @@
     # APC
     php_admin_value apc.rfc1867_name "UPLOAD_PROGRESS"
 
+    # Much of this can be placed in a .htaccess file in the DocumentRoot, but
+    # you will incur a performance hit
     <Directory />
     
         Options -Indexes
